# Bitcoin-Protocol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Block.hpp  BlockHeader.hpp  MerkleTree.hpp  Transaction.hpp  TransactionIn.hpp  TransactionOut.hpp  common.hpp
src/: Block.cpp  BlockHeader.cpp  MerkleTree.cpp  Transaction.cpp  TransactionIn.cpp  TransactionOut.cpp  common.cpp
tests/unit/: CMakeLists.txt  test_Block.cpp  test_BlockHeader.cpp  test_MerkleTree.cpp
